  * removed extras/web_ui/inc/desc.css
  * extras/web_ui/inc/feed.html: remove invalidate feed button
  * extras/web_ui/inc/feed.html: add edit feed button
  * extras/web_ui/inc/feed.html: javascript desc for edit and del btns
  * extras/web_ui/inc/feed_list.html: add addFeed() 
  * extras/web_ui/inc/feed_list.html: make selectFeed() is category-aware
  * extras/web_ui/inc/feed_list.html: add add, save, and sort to cat form
  * removed extras/web_ui/inc/feedopts.css
  * extras/web_ui/inc/item.html:  make link category-aware
  * removed extras/web_ui/inc/item_list.css
  * extras/web_ui/inc/item_list.html: make selectFeedItem() category-aware
  * extras/web_ui/inc/quit.html: removed javascript (silly copy & paste)
  * extras/web_ui/inc/quit.html: added copyright and version info
  * removed extras/web_ui/inc/titlebar.css

* Tue Sep 23 22:43:28 2003, pabs <pabs@pablotron.org>
  * extras/win32/raggle_server.bat: launch client automatically

* Tue Sep 23 22:51:34 2003, pabs <pabs@pablotron.org>
  * extras/win32/raggle_client.html: lower refresh to 2 seconds
  * extras/win32/raggle_server.bat: launch client page automatically

* Tue Sep 23 23:33:39 2003, pabs <pabs@pablotron.org>
  * raggle: added find_win32_proxy (check registry for proxy)

* Tue Sep 23 23:43:52 2003, pabs <pabs@pablotron.org>
  * raggle: added debugging for win32 registry proxy stuff

* Tue Sep 23 23:46:13 2003, pabs <pabs@pablotron.org>
  * raggle: fix win32 proxy stuff

* Tue Sep 23 23:56:23 2003, pabs <pabs@pablotron.org>
  * raggle: disable win32 proxy debug code

* Wed Sep 24 00:08:51 2003, pabs <pabs@pablotron.org>
  * extras/web_ui/inc/default.css: fixed => absolute, so things look
    right in IE

* Wed Sep 24 14:17:51 2003, pabs <pabs@pablotron.org>
  * raggle: make raggle work (hopefully) on single-user win32 machines
  * extras/web_ui/index.html: make frames sligntly larger
  * extras/web_ui/titlebar.html: add export button (doesn't work yet)